--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -14,12 +14,11 @@ html {
 }
 
 body {
-    // font-size: 16px;
-    // font-weight: 400;
-    // line-height: 1.625;
-    color: $color-primary-dark;
+    font-size: 14px;
+	font-weight: 400;
+	line-height: 1.25;
+	color: var(--color-primary-dark);
     margin: 0;
-    background-color: $color-secondary-dark;
   }
 
 h1,
@@ -53,3 +52,23 @@ ul {
 	padding: 0;
 	list-style-type: none;
 }
+
+
+.container {
+	margin: 0 auto;
+	// padding: 0;
+	padding: 0 128px;
+	max-width: 1440px;
+	width: 100%;
+	overflow: hidden;
+}
+// @media screen and (min-width: 768px) {
+// 	.container {
+// 		padding: 0 32px;
+// 	}
+// }
+// @media screen and (min-width: 1280px) {
+// 	.container {
+// 		padding: 0 128px;
+// 	}
+// }
