--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,2 +1,10 @@
-// @import './base/variables.scss';
-// @import './base/base.scss';
+@import './base/variables.scss';
+@import './base/base.scss';
+
+@import "./layout/header.scss";
+@import "./layout/userNav.scss";
+// @import './layout/hero';
+// @import './layout/catalog';
+// @import './layout/register';
+
+@import "./components/logo.scss";
