--- a/src/styles/base/_variables.scss
+++ b/src/styles/base/_variables.scss
@@ -18,6 +18,7 @@ $color-secondary-dark: var(--color-secondary-dark);
 $color-secondary-darker: var(--color-secondary-darker);
 $color-primary-light: var(--color-primary-light);
 $color-secondary-light: var(--color-secondary-light);
+$color-light: var(--color-light);
 $color-accent: var(--color-accent);
 $color-accent-dark: var(--color-accent-dark);
 
